--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -18,7 +18,7 @@
          "run_at":"document_idle"
       }
    ],
-   "version":"1.0,
+   "version":"1.0",
   "background": {
     "scripts": ["background.js"]
   },
