--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -1,5 +1,5 @@
 {  
-   "manifest_version":1,
+   "manifest_version": 2,
    "name":"ScratchEmoji",
    "short_name":"SE",
    "description":"Brings Emojis to Scratch!",
@@ -33,7 +33,7 @@
    },
    "permissions":[  
       "https://scratch.mit.edu/*",
-      "storage",
+      "storage"
    ],
    "optional_permissions": ["notifications"]
 }
